--- a/media-queries/mq002/estilos/geral.css
+++ b/media-queries/mq002/estilos/geral.css
@@ -5,20 +5,15 @@
     margin: 0px;
 }
 html, body{
-    width: 98vw;
+    width: 100vw;
     height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
-}
-body{
-    color: white;
     background-color: #233eff;
-    text-align: justify;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 h1{
-    margin: 10px;
+    color: white;
+    text-shadow: 3px 3px 0px #2137e0;
     padding: 10px;
-}
-p{
-    text-indent: 16px;
-    line-height: 1.5em;
 }
