--- a/media-queries/mq002/estilos/style.css
+++ b/media-queries/mq002/estilos/style.css
@@ -5,15 +5,17 @@
     margin: 0px;
 }
 html, body{
-    width: 100vw;
-    height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #233eff;
-    background-size: contain;
+    width: 100vw;
+    height: 100vh;
+}
+body{
     background-repeat: no-repeat;
+    background-size: contain;
 }
 h1{
     color: white;
-    text-shadow: 3px 3px 0px #2137e0;
     padding: 10px;
+    text-shadow: 3px 3px 0px #1c2fbd;
 }
